crates/ruff_python_parser/tests/snapshots/invalid_syntax@statements__if_extra_closing_parentheses.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/statements/if_extra_closing_parentheses.py
---
## AST

 ```
Module(
    ModModule {
        range: 0..110,
        body: [
            If(
                StmtIf {
                    range: 90..109,
                    test: BooleanLiteral(
                        ExprBooleanLiteral {
                            range: 93..97,
                            value: true,
                        },
                    ),
                    body: [
                        Pass(
                            StmtPass {
                                range: 105..109,
                            },
                        ),
                    ],
                    elif_else_clauses: [],
                },
            ),
            Expr(
                StmtExpr {
                    range: 97..99,
                    value: Invalid(
                        ExprInvalid {
                            value: "))",
                            range: 97..99,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | # FIXME(micha): This creates two syntax errors instead of just one (and overlapping ones)
2 | if True)):
  |        ^ Syntax Error: expected Colon, found Rpar
3 |     pass
  |


  |
1 | # FIXME(micha): This creates two syntax errors instead of just one (and overlapping ones)
2 | if True)):
  |        ^^ Syntax Error: unexpected tokens
3 |     pass
  |



